Fix home page width issue on smaller devices

--- a/site/src/style/homepage.less
+++ b/site/src/style/homepage.less
@@ -13,6 +13,7 @@
 		margin-top: @margin;
 		margin-bottom: @margin;
 		height: 150px;
+	  	width: 100%;
 	}
 
 	p {
